# sheet_myself_rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  lib.rs  main.rs  skill.rs
