[package]
name = "sheet_myself_rs"
version = "0.0.1"
authors = ["Scott Harper <orcein@gmail.com>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "smlib"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version ="0.4", features = ["serde"] }
eframe = "0.17.0" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[features]
default = []
persistence = ["eframe/persistence"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
